--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -339,14 +339,14 @@
 			color: black !important;
 		}
 
-		input[type=radio] {
+		input[type="radio"] {
 			-moz-appearance:none;
 			-webkit-appearance:none;
 			-o-appearance:none;
 			outline: none;
 			content: none;
 		}
-		input[type=radio]:before {
+		input[type="radio"]::before {
 			width: 15px;
 			height: 15px;
 			border: 2px solid #3EB489;
@@ -354,7 +354,7 @@
 			transform: scale(0);
 		}
 
-		input[type=radio]:checked:before {
+		input[type="radio"]:checked::before {
 			transform: scale(1);
 		}
 	</style>
@@ -8288,6 +8288,7 @@
 	
 </body>
 </html>
+
 
 
 
