--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -349,18 +349,10 @@
 			height: 15px;
 			border: 2px solid #3EB489;
 			border-radius: 50%;
-			transform: scale(0);
-		}
-		input[type=radio]::before {
-			width: 15px;
-			height: 15px;
-			border: 2px solid #3EB489;
-			border-radius: 50%;
-			transform: scale(0);
 		}
 
-		input[type=radio]:checked::before {
-			transform: scale(1);
+		input[type=radio]:checked {
+			background-color: #3EB489;
 		}
 	</style>
 	
@@ -8293,6 +8285,7 @@
 	
 </body>
 </html>
+
 
 
 
