--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -319,7 +319,7 @@
 		}
 		
 		input[type=checkbox]:before {
-		    content: "✓";
+		    content: "\f14a";
 		    font-size: 15px;
 			font-weight: bold;
 			padding-left: 3px;
@@ -349,6 +349,7 @@
 			height: 15px;
 			border: 2px solid #3EB489;
 			border-radius: 50%;
+			padding: 1px;
 		}
 
 		input[type=radio]:checked {
@@ -8285,6 +8286,7 @@
 	
 </body>
 </html>
+
 
 
 
