--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -319,7 +319,7 @@
 		}
 		
 		input[type=checkbox]:before {
-		    content: "\f14a";
+		    content: "✓";
 		    font-size: 15px;
 			font-weight: bold;
 			padding-left: 3px;
@@ -349,11 +349,11 @@
 			height: 15px;
 			border: 2px solid #3EB489;
 			border-radius: 50%;
-			padding: 1px;
 		}
 
 		input[type=radio]:checked {
 			background-color: #3EB489;
+			padding-left: 1px;
 		}
 	</style>
 	
@@ -8286,6 +8286,7 @@
 	
 </body>
 </html>
+
 
 
 
