--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -353,7 +353,7 @@
 
 		input[type=radio]:checked {
 			background-color: #3EB489;
-			padding-left: 1px;
+			box-shadow: inset 0 0 0 4px #f4f4f4;
 		}
 	</style>
 	
@@ -8286,6 +8286,7 @@
 	
 </body>
 </html>
+
 
 
 
