--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -2834,7 +2834,7 @@
 				<td rowspan=2 style="border-left: 3px ridge #B119AA; padding-left: 15px;">
 					<h2>Recherche par nom</h2>
 					<input id="ProductNameLike" size="64" type="text" placeholder="Entrez le nom déposé d'un produit." class="Name" />
-					<br/>(Entrez '%' pour remplacer une chaîne de caractères et '_' pour remplacer un caractère unique.)
+					<br/>(Entrez '%' pour une complétion automatique.)
 					<br/>
 					<br/><input type="button" value="Rechercher" onclick="DoSearchProductByName();" class="Import" />
 					<br/>
@@ -2879,7 +2879,7 @@
 				<td rowspan=2 style="border-left: 3px ridge #B119AA; padding-left: 15px;">
 					<h2>Recherche par nom</h2>
 					<input id="PlanteNameLike" size="64" type="text" placeholder="Entrez le nom commun ou scientifique d'une plante." class="Name" />
-					<br/>(Entrez '%' pour remplacer une chaîne de caractères et '_' pour remplacer un caractère unique.)
+					<br/>(Entrez '%' pour une complétion automatique.)
 					<br/>
 					<br/><input type="button" value="Rechercher" onclick="DoSearchPlanteByName();" class="Import" />
 					<br/>
@@ -2927,6 +2927,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
