--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -1906,8 +1906,8 @@
 				PlanteInfoTxt += "<img style=\"max-height: 500px; max-width: 500px\" src=" + CastBufferToImgURLData(PlantePhoto) + " />";
 				PlanteInfoTxt += "</td><td class=\"casedroite\" style=\"width: 30%; border: 5px; border-style: ridge; border-color: #E5CF45; border-radius: 10px; padding: 15px;\">";
 				PlanteInfoTxt += "<b>Date de dernière mise à jour : </b>" + CastBufferToRichText(Today) + "<br/><br/><br/>";
-				PlanteInfoTxt += "<b>Proprietés principales : </b>" + PlanteP + "<br/><br/>";
-				PlanteInfoTxt += "<b>Espèces chez lesquelles l'utilisation est décrite : </b>" + EspeceTxt + "<br/><br/>";
+				PlanteInfoTxt += "<b>Proprietés principales : </b><br/>&emsp;" + PlanteP + "<br/><br/>";
+				PlanteInfoTxt += "<b>Espèces chez lesquelles l'utilisation est décrite : </b><br/>&emsp;" + EspeceTxt + "<br/><br/>";
 				PlanteInfoTxt += "<div class=\"Recherche\"><b>Données expérimentales : </b>" + RchrImg;
 				PlanteInfoTxt += "<span class=\"PopUpRecherches\"><table border = 0px margin-left=auto margin-right=auto valign=center><tr><td align=right></td><td align=center>=</td><td align=left>Aucune recherche expérimentale n'a été effectuée.</td></tr><tr><td align=right><img style=\"height: 20px; vertical-align: sub;\" src=\"Images/Edelweiss.png\"/></td><td align=center>=</td><td align=left>Des recherches ont été faites in vitro.</td></tr><tr><td align=right><img style=\"height: 20px; vertical-align: sub;\" src=\"Images/Edelweiss.png\"/><img style=\"height: 20px; vertical-align: sub;\" src=\"Images/Edelweiss.png\"/></td><td align=center>=</td><td align=left>Quelques recherches ont été faites sur des rongeurs.</td></tr><tr><td align=right><img style=\"height: 20px; vertical-align: sub;\" src=\"Images/Edelweiss.png\"/><img style=\"height: 20px; vertical-align: sub;\" src=\"Images/Edelweiss.png\"/><img style=\"height: 20px; vertical-align: sub;\" src=\"Images/Edelweiss.png\"/></td><td align=center>=</td><td align=left>De  nombreuses recherches ont été faites sur des rongeurs.</td></tr><tr><td align=right><img style=\"height: 20px; vertical-align: sub;\" src=\"Images/Edelweiss.png\"/><img style=\"height: 20px; vertical-align: sub;\" src=\"Images/Edelweiss.png\"/><img style=\"height: 20px; vertical-align: sub;\" src=\"Images/Edelweiss.png\"/><img style=\"height: 20px; vertical-align: sub;\" src=\"Images/Edelweiss.png\"/></td><td align=center>=</td><td align=left>Quelques recherches ont été faites sur des espèces cibles.</td></tr><tr><td align=right><img style=\"height: 20px; vertical-align: sub;\" src=\"Images/Edelweiss.png\"/><img style=\"height: 20px; vertical-align: sub;\" src=\"Images/Edelweiss.png\"/><img style=\"height: 20px; vertical-align: sub;\" src=\"Images/Edelweiss.png\"/><img style=\"height: 20px; vertical-align: sub;\" src=\"Images/Edelweiss.png\"/><img style=\"height: 20px; vertical-align: sub;\" src=\"Images/Edelweiss.png\"/></td><td align=center>=</td><td align=left>De nombreuses recherches ont été faites sur des espèces cibles.</td></tr></table></span></div><br/>";
 				PlanteInfoTxt += "<div class=\"Clinique\"><br/><b>Données cliniques : </b>" + ClinImg;
@@ -2927,6 +2927,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
