--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -7679,7 +7679,7 @@
 			RowEditFormTxt += " /><br/>";			
 			// append Plante view
 			let PlanteInfoTxt = "";
-			PlanteInfoTxt += "<h1>Plante " + PlanteId + " Info :</h1>";
+			PlanteInfoTxt += "<h1>Informations de la plante " + PlanteId + " :</h1>";
 			// fetch Plante info
 			let PlanteSQLRequestResultObj = [];
 			if(PlanteId == 0)
@@ -8241,6 +8241,7 @@
 	
 </body>
 </html>
+
 
 
 
