--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -7910,6 +7910,7 @@
 			};
 			// append list product
 			let ResultList = "";
+			ResultList += "<ul style=\"list-style-type:'✤ ';\" >";
 			let NbResultRow = SQLRequestResultObj.length;
 			if(NbResultRow == 0)
 			{
@@ -7920,10 +7921,10 @@
 				for(let i = 0; i < NbResultRow; i++)
 				{
 					let TmpResultRow = SQLRequestResultObj[i];
-					
-					ResultList += "<span class=\"MatchResultClass\" onclick=\"DoEditPlante(" + TmpResultRow[0] +");\">" + TmpResultRow[1] + " (<i>" + TmpResultRow[2] + "</i>)</span><br/>";
+					ResultList += "<li><span class=\"MatchResultClass\" onclick=\"DoEditPlante(" + TmpResultRow[0] +");\">" + TmpResultRow[1] + " (<i>" + TmpResultRow[2] + "</i>)</span></li>";
 				}
 			}
+			ResultList += "</ul>";
 			RowChoiceFormTxt += ResultList;
 			// hide table choice and edit form
 			document.getElementById("TableChoiceForm").style.display = 'none';
@@ -8241,6 +8242,7 @@
 	
 </body>
 </html>
+
 
 
 
