--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -4903,7 +4903,7 @@
 					ResultList += "<li><span class=\"MatchResultClass\" onclick=\"DoEditLabo(" + TmpResultRow[0] +");\">" + TmpResultRow[1] + "</span></li>";
 				}
 			}
-			ResultList += "<\ul>";
+			ResultList += "</ul>";
 			RowChoiceFormTxt += ResultList;
 			// hide table choice and edit form
 			document.getElementById("TableChoiceForm").style.display = 'none';
@@ -5119,7 +5119,7 @@
 					ResultList += "<li><span class=\"MatchResultClass\" onclick=\"DoEditFcts(" + TmpResultRow[0] +");\">" + TmpResultRow[1] + "</span></li>";
 				}
 			}
-			ResultList += "<\ul>";
+			ResultList += "</ul>";
 			RowChoiceFormTxt += ResultList;
 			// hide table choice and edit form
 			document.getElementById("TableChoiceForm").style.display = 'none';
@@ -5337,7 +5337,7 @@
 					ResultList += "<li><span class=\"MatchResultClass\" onclick=\"DoEditUsecase(" + TmpResultRow[0] +");\">" + TmpResultRow[1] + "</span></li>";
 				}
 			}
-			ResultList += "<\ul>";
+			ResultList += "</ul>";
 			RowChoiceFormTxt += ResultList;
 			// hide table choice and edit form
 			document.getElementById("TableChoiceForm").style.display = 'none';
@@ -5547,7 +5547,7 @@
 					ResultList += "<li><span class=\"MatchResultClass\" onclick=\"DoEditToxicite(" + TmpResultRow[0] +");\">" + TmpResultRow[1] + "</span></li>";
 				}
 			}
-			ResultList += "<\ul>";
+			ResultList += "</ul>";
 			RowChoiceFormTxt += ResultList;
 			// hide table choice and edit form
 			document.getElementById("TableChoiceForm").style.display = 'none';
@@ -5757,7 +5757,7 @@
 					ResultList += "<li><span class=\"MatchResultClass\" onclick=\"DoEditEffet2(" + TmpResultRow[0] +");\">" + TmpResultRow[1] + "</span></li>";
 				}
 			}
-			ResultList += "<\ul>";
+			ResultList += "</ul>";
 			RowChoiceFormTxt += ResultList;
 			// hide table choice and edit form
 			document.getElementById("TableChoiceForm").style.display = 'none';
@@ -5967,7 +5967,7 @@
 					ResultList += "<li><span class=\"MatchResultClass\" onclick=\"DoEditCtrIndic(" + TmpResultRow[0] +");\">" + TmpResultRow[1] + "</span></li>";
 				}
 			}
-			ResultList += "<\ul>";
+			ResultList += "</ul>";
 			RowChoiceFormTxt += ResultList;
 			// hide table choice and edit form
 			document.getElementById("TableChoiceForm").style.display = 'none';
@@ -6183,7 +6183,7 @@
 					ResultList += "<li><span class=\"MatchResultClass\" onclick=\"DoEditGalenique(" + TmpResultRow[0] +");\">" + TmpResultRow[1] + "</span></li>";
 				}
 			}
-			ResultList += "<\ul>";
+			ResultList += "</ul>";
 			RowChoiceFormTxt += ResultList;
 			// hide table choice and edit form
 			document.getElementById("TableChoiceForm").style.display = 'none';
@@ -6399,7 +6399,7 @@
 					ResultList += "<li><span class=\"MatchResultClass\" onclick=\"DoEditCategorie(" + TmpResultRow[0] +");\">" + TmpResultRow[1] + "</span></li>";
 				}
 			}
-			ResultList += "<\ul>";
+			ResultList += "</ul>";
 			RowChoiceFormTxt += ResultList;
 			// hide table choice and edit form
 			document.getElementById("TableChoiceForm").style.display = 'none';
@@ -8160,7 +8160,7 @@
 					ResultList += "<li><span class=\"MatchResultClass\" onclick=\"DoEditUsePart(" + TmpResultRow[0] +");\">" + TmpResultRow[1] + "</span></li>";
 				}
 			}
-			ResultList += "<\ul>";
+			ResultList += "</ul>";
 			RowChoiceFormTxt += ResultList;
 			// hide table choice and edit form
 			document.getElementById("TableChoiceForm").style.display = 'none';
@@ -8264,6 +8264,7 @@
 	
 </body>
 </html>
+
 
 
 
