--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -31,7 +31,7 @@
 		ul {
 			margin-top: 2px;
 			margin-bottom: 0;
-			margin-left: 5px;
+			margin-left: 0;
 		}
 		p {
 			margin-top: 0;
@@ -8264,6 +8264,7 @@
 	
 </body>
 </html>
+
 
 
 
