--- a/PlanteVet_Edition.html
+++ b/PlanteVet_Edition.html
@@ -4676,7 +4676,7 @@
 			};
 			// append list product
 			let ResultList = "";
-			ResultList += "<ul style=\"list-style-type:'✤ ';\" >";
+			ResultList += "<ul>";
 			let NbResultRow = SQLRequestResultObj.length;
 			if(NbResultRow == 0)
 			{
@@ -4892,7 +4892,7 @@
 			};
 			// append list product
 			let ResultList = "";
-			ResultList += "<ul style=\"list-style-type:'✤ ';\" >";
+			ResultList += "<ul>";
 			let NbResultRow = SQLRequestResultObj.length;
 			if(NbResultRow == 0)
 			{
@@ -5108,7 +5108,7 @@
 			};
 			// append list product
 			let ResultList = "";
-			ResultList += "<ul style=\"list-style-type:'✤ ';\" >";
+			ResultList += "<ul>";
 			let NbResultRow = SQLRequestResultObj.length;
 			if(NbResultRow == 0)
 			{
@@ -5326,7 +5326,7 @@
 			};
 			// append list product
 			let ResultList = "";
-			ResultList += "<ul style=\"list-style-type:'✤ ';\" >";
+			ResultList += "<ul>";
 			let NbResultRow = SQLRequestResultObj.length;
 			if(NbResultRow == 0)
 			{
@@ -5536,7 +5536,7 @@
 			};
 			// append list product
 			let ResultList = "";
-			ResultList += "<ul style=\"list-style-type:'✤ ';\" >";
+			ResultList += "<ul>";
 			let NbResultRow = SQLRequestResultObj.length;
 			if(NbResultRow == 0)
 			{
@@ -5746,7 +5746,7 @@
 			};
 			// append list product
 			let ResultList = "";
-			ResultList += "<ul style=\"list-style-type:'✤ ';\" >";
+			ResultList += "<ul>";
 			let NbResultRow = SQLRequestResultObj.length;
 			if(NbResultRow == 0)
 			{
@@ -5956,7 +5956,7 @@
 			};
 			// append list product
 			let ResultList = "";
-			ResultList += "<ul style=\"list-style-type:'✤ ';\" >";
+			ResultList += "<ul>";
 			let NbResultRow = SQLRequestResultObj.length;
 			if(NbResultRow == 0)
 			{
@@ -6172,7 +6172,7 @@
 			};
 			// append list product
 			let ResultList = "";
-			ResultList += "<ul style=\"list-style-type:'✤ ';\" >";
+			ResultList += "<ul>";
 			let NbResultRow = SQLRequestResultObj.length;
 			if(NbResultRow == 0)
 			{
@@ -6388,7 +6388,7 @@
 			};
 			// append list product
 			let ResultList = "";
-			ResultList += "<ul style=\"list-style-type:'✤ ';\" >";
+			ResultList += "<ul>";
 			let NbResultRow = SQLRequestResultObj.length;
 			if(NbResultRow == 0)
 			{
@@ -6626,7 +6626,7 @@
 			};
 			// append list product
 			let ResultList = "";
-			ResultList += "<ul style=\"list-style-type:'✤ ';\" >";
+			ResultList += "<ul>";
 			let NbResultRow = SQLRequestResultObj.length;
 			if(NbResultRow == 0)
 			{
@@ -6641,7 +6641,7 @@
 					ResultList += "<li><span class=\"MatchResultClass\" onclick=\"DoEditEspece(" + TmpResultRow[0] +");\">" + TmpResultRow[1] + "</span></li>";
 				}
 			}
-			ResultList += "<ul>";
+			ResultList += "</ul>";
 			RowChoiceFormTxt += ResultList;
 			// hide table choice and edit form
 			document.getElementById("TableChoiceForm").style.display = 'none';
@@ -8149,7 +8149,7 @@
 			};
 			// append list product
 			let ResultList = "";
-			ResultList += "<ul style=\"list-style-type:'✤ ';\" >";
+			ResultList += "<ul>";
 			let NbResultRow = SQLRequestResultObj.length;
 			if(NbResultRow == 0)
 			{
@@ -8268,6 +8268,7 @@
 	
 </body>
 </html>
+
 
 
 
