--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -1355,7 +1355,7 @@
 					console.log("Doing search plante name SQL request ...");
 					try {
 						PlanteSQLRequestResultObj = globalThis.WorkingDB.exec({
-							sql: "select Name from PLANTE where Id like $a",
+							sql: "select Name,Latin from PLANTE where Id like $a",
 							rowMode: 'array',
 							bind: {$a: PlanteId},
 						});
@@ -1365,7 +1365,7 @@
 					};
 					
 					let TmpResultRow = PlanteSQLRequestResultObj[0];
-					ResultList += "<span class=\"MatchResultClass\" onclick=\"DoViewPlante(" + PlanteId +", -1);\">Elt " + PlanteId + " : " + TmpResultRow[0] + "</span><br/>";
+					ResultList += "<span class=\"MatchResultClass\" onclick=\"DoViewPlante(" + PlanteId +", -1);\">" + TmpResultRow[0] + " (<i>" + TmpsResultRow[1] + "</i>)</span><br/>";
 				}
 			}
 			// hidding search form
@@ -2927,6 +2927,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
