--- a/PlanteVet.html
+++ b/PlanteVet.html
@@ -1365,7 +1365,7 @@
 					};
 					
 					let TmpResultRow = PlanteSQLRequestResultObj[0];
-					ResultList += "<span class=\"MatchResultClass\" onclick=\"DoViewPlante(" + PlanteId +", -1);\">" + TmpResultRow[0] + " (<i>" + TmpsResultRow[1] + "</i>)</span><br/>";
+					ResultList += "<span class=\"MatchResultClass\" onclick=\"DoViewPlante(" + PlanteId +", -1);\">" + TmpResultRow[0] + " (<i>" + TmpResultRow[1] + "</i>)</span><br/>";
 				}
 			}
 			// hidding search form
@@ -2927,6 +2927,7 @@
 	</div>	
 </body>
 </html>
+
 
 
 
