--- a/LiensExt.html
+++ b/LiensExt.html
@@ -104,7 +104,7 @@
       </tr>
       <tr class="DblLink">
         <td class="link"><img src="Images/Kooperation Phytopharmaka.png" style="width:75px;"></td>
-        <td class="link2"><a href='https://www.arzneipflanzenlexikon.info/en/' target='_blank'>WikiPhyto</a>
+        <td class="link2"><a href='https://www.arzneipflanzenlexikon.info/en/' target='_blank'>Kooperation Phytopharmaka</a>
 			<br/>Disponible en Anglais et en Allemand
 		</td>
 		<td>&nbsp;</td>
